<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spalsh_screen"
    tools:context=".MainActivity">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/search_view_shape"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_hint"
        android:searchIcon="@drawable/search"/>

    <TextView
        android:id="@+id/searchedCity_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchView"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:drawablePadding="10dp"
        android:fontFamily="@font/merriweathersans_medium"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAllCaps="true"
        app:drawableStartCompat="@drawable/location" />
    
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_animationView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="17dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/searchedCity_textView" />

    <TextView
        android:id="@+id/today_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchedCity_textView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="21dp"
        android:layout_toEndOf="@id/lottie_animationView"
        android:fontFamily="@font/merriweathersans_bold"
        android:gravity="center"
        android:text="Today"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/temp_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_below="@id/today_textView"
        android:layout_alignStart="@id/today_textView">

        <TextView
        android:id="@+id/temp_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweathersans_semibold"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="55sp" />

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/temp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="27sp"
            android:textColor="@color/black"
            android:fontFamily="@font/merriweathersans_semibold" />

        <TextView
            android:id="@+id/temp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="27sp"
            android:textColor="#80000000"
            android:fontFamily="@font/merriweathersans_semibold" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/weather_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lottie_animationView"
        android:layout_alignEnd="@id/lottie_animationView"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="17dp"
        android:fontFamily="@font/merriweathersans_regular"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/max_temp_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_linear_layout"
        android:layout_marginTop="17dp"
        android:layout_alignStart="@id/today_textView"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/merriweathersans_regular"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/min_temp_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/max_temp_textView"
        android:layout_alignStart="@id/today_textView"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/merriweathersans_regular"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/day_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/min_temp_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/merriweathersans_bold"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/day_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/merriweathersans_regular"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/outer_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="27dp"
        android:orientation="vertical"
        android:background="@drawable/background_shape"
        android:layout_below="@id/date_textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:background="@drawable/background_shape"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="4dp"
                    android:layout_gravity="center"
                    android:src="@drawable/humidity" />

                <TextView
                    android:id="@+id/humidity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="-- %"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="@string/humidity"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>

            <!-- Cell 1,2 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:background="@drawable/background_shape"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="4dp"
                    android:layout_gravity="center"
                    android:src="@drawable/wind" />

                <TextView
                    android:id="@+id/wind_speed_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="-- km/hr"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="@string/wind_speed"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>

            <!-- Cell 1,3 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:background="@drawable/background_shape"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="4dp"
                    android:layout_gravity="center"
                    android:src="@drawable/conditions" />

                <TextView
                    android:id="@+id/conditions_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="--"
                    android:textAllCaps="true"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="@string/condition"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <!-- Cell 2,1 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:background="@drawable/background_shape"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="4dp"
                    android:layout_gravity="center"
                    android:src="@drawable/sunrise" />

                <TextView
                    android:id="@+id/sunrise_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="--:--"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="@string/sunrise"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>

            <!-- Cell 2,2 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:background="@drawable/background_shape"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="4dp"
                    android:layout_gravity="center"
                    android:src="@drawable/sunset" />

                <TextView
                    android:id="@+id/sunset_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="--:--"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="@string/sunset"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>

            <!-- Cell 2,3 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:background="@drawable/background_shape"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="4dp"
                    android:layout_gravity="center"
                    android:src="@drawable/sea" />

                <TextView
                    android:id="@+id/air_pressure_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="-- hPa"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="@string/pressure"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/merriweathersans_medium"
        android:text="@string/design_by"
        android:textColor="@color/white" />

</RelativeLayout>